<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/laptop_colors960"
        android:scaleType="centerCrop"
        android:contentDescription="@string/bkdg_desc"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/technologo250"
            android:scaleType="centerInside"
            android:paddingTop="8dp"
            android:contentDescription="@string/logo_desc"
            />

        <TextView
            android:id="@+id/tagline1"
            android:layout_below="@id/logo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:textSize="32sp"
            android:paddingTop="8dp"
            android:paddingBottom="0dp"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            />

        <ViewFlipper
            android:id="@+id/tagTextFlip1"
            android:layout_below="@id/tagline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoStart="true" >

            <TextView
                android:id="@+id/slide1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/slide1"
                android:textColor="#ffffff"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/slide2"
                android:text="@string/slide2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textColor="#ffffff"
                android:gravity="center_horizontal" />

            <TextView
                android:text="@string/slide3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textColor="#ffffff"
                android:gravity="center_horizontal" />

            <TextView
                android:text="@string/slide4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textColor="#ffffff"
                android:gravity="center_horizontal" />

        </ViewFlipper>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/web"
                android:textColor="#000000"
                android:textSize="16sp"
                android:autoLink="all"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="#000000"
                android:textSize="16sp"
                android:autoLink="all"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/address"
                android:textColor="#000000"
                android:textSize="16sp"
                android:autoLink="all"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/logo2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/logo_desc"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tg_bicolor200" />


    </RelativeLayout>


</RelativeLayout>